force-app/main/default/objects/Customer_Training__c/Customer_Training__c.object-meta.xml
<CustomObject>
    <label>Customer Training</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Customer Training Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Training</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>