force-app/main/default/objects/Customer_Training__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Training</relationshipLabel>
    <relationshipName>Customer_Training</relationshipName>
    <type>Lookup</type>
</CustomField>