force-app/main/default/objects/Customer_Training__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Training_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>American Olean: The Porcelain Mystery</fullName>
            </value>
            <value>
                <fullName>Buchtal: Benefits and Applications of Photo-catalytic Coatings</fullName>
            </value>
            <value>
                <fullName>Crossville: Sustainable Solutions</fullName>
            </value>
            <value>
                <fullName>Crossville Plant Tour</fullName>
            </value>
            <value>
                <fullName>Florida Tile: Tile - The Natural Choice</fullName>
            </value>
            <value>
                <fullName>Florida Tile Plant Tour</fullName>
            </value>
            <value>
                <fullName>Noble: Sound Rated Floors for Hardwood, Ceramic, Tile &amp; Stone</fullName>
            </value>
            <value>
                <fullName>Realstone: Natural Stone Thin Veneer - The Basics</fullName>
            </value>
            <value>
                <fullName>Schluter: Maximixing Tile Installation with Trim Profiles</fullName>
            </value>
            <value>
                <fullName>Schluter: Moisture Management in Tiled Showers</fullName>
            </value>
            <value>
                <fullName>TEC: Care &amp; Maintenance of Natural Stone</fullName>
            </value>
            <value>
                <fullName>TEC: Installation of Large Format Tiles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>