force-app/main/default/objects/Customer_Training__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEU</fullName>
            </value>
            <value>
                <fullName>Plant Tour</fullName>
            </value>
            <value>
                <fullName>Product Knowledge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>